# IX-Style

./: NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/traceability/: ix_style_traceability_seed.yaml
docs/: PROJECT_CHARTER.md
docs/architecture/: IXS-COMMAND-AUTHORITY-MODEL.md  IXS-CONSTRAINT-CATALOG.md  IXS-FDIR-ARCHITECTURE.md  IXS-MODE-ALLOCATION-AND-POSTURE-RESOLUTION.md  IXS-OPERATIONAL-MODE-MODEL.md  IXS-RECOVERY-GATE-AND-AUTHORITY-RESTORATION.md  IXS-RUNTIME-ASSURANCE-GUARD.md  IXS-SECURE-MESSAGING-AND-EVIDENCE-ARCHITECTURE.md  IXS-SENSOR-TRUST-AND-ESTIMATION-FRAMEWORK.md  IXS-TAMPER-EVIDENT-EVIDENCE-BUNDLES.md
docs/developer/: IXS-DEVELOPER-ONBOARDING-AND-QUICKSTART.md
docs/fdir/: FAULT_CLASS_NOTES.md
docs/hazards/: HAZARD_SCORING_MODEL.md  IXS-HAZARD-REGISTER.md
docs/implementation/: IXS-REFERENCE-IMPLEMENTATION-PLAN.md
examples/: nav_spoof_transition_demo.py  power_fault_clamp_demo.py
scripts/: export_sample_review_artifacts.py  run_invariant_checks.py  run_quickstart_flow.py  run_repo_self_audit.py  run_sample_scenarios.py
tests/: test_decision_pipeline.py  test_evidence_bundle_chain.py  test_fdir_engine.py  test_guard_constraints.py  test_invariants.py  test_message_validation.py  test_mission_health_builder.py  test_mode_allocator.py  test_operator_narration.py  test_quickstart_runner.py  test_recovery_gate.py  test_repository_self_audit.py  test_review_artifact_package.py  test_traceability_audit.py  test_trust_evaluator.py  test_verification_evidence_bundle.py  test_verification_runner.py
(+74 files in other folders)
