[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-style"
version = "0.1.0"
description = "Assured-autonomy reference architecture and executable verification scaffold."
readme = ""
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Bryce Lovell" }
]
keywords = [
  "assured-autonomy",
  "flight-software",
  "runtime-assurance",
  "fdir",
  "verification",
  "aerospace"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "PyYAML>=6.0.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
